tests/e2e/keywords/any_is_keyword.error
Error: syntax error in story at line 1, column 1

1|    any = 1
      ^^^

E0020: `any` is a reserved keyword
